tdf#151847 Some chart UNO objects were not advertising their types property

which means that accessin them from python and trying to use the
XPropertySet and related interfaces doesn't work nicely

Change-Id: I873f6a6fcb048e7f8244313cd737c04b003259a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143675
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>