chart2/source/model/main/PageBackground.hxx
@@ -58,6 +58,9 @@ public:
 
     explicit PageBackground( const PageBackground & rOther );
 
+    // ____ XTypeProvider ____
+    virtual css::uno::Sequence< css::uno::Type > SAL_CALL getTypes() override;
+
     // ____ OPropertySet ____
     virtual void GetDefaultValue( sal_Int32 nHandle, css::uno::Any& rAny ) const override;
 
