chart2/source/model/main/Wall.hxx
@@ -52,6 +52,9 @@ public:
 
     explicit Wall( const Wall & rOther );
 
+    // ____ XTypeProvider ____
+    virtual css::uno::Sequence< css::uno::Type > SAL_CALL getTypes() override;
+
     // ____ OPropertySet ____
     virtual void GetDefaultValue( sal_Int32 nHandle, css::uno::Any& rAny ) const override;
 
